Fix linter error

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fork Me! FCC: Test Suite Template</title> 
     <link rel="stylesheet" href="../css/styles.css">
   </head>
 
@@ -42,7 +44,7 @@
           </p>
           <div>-- Indian Prime Minister Manmohan Singh</div>
         </blockquote>
-        <h3>If you have time, you should read more about this incredible human being on his<a href="https://en.wikipedia.org/wiki/Norman_Borlaug" id="tribute-link" target="_blank">Wikipedia entry.</a></h3>
+        <h3>If you have time, you should read more about this incredible human being on his<a href="https://en.wikipedia.org/wiki/Norman_Borlaug" id="tribute-link" target="_blank" rel="noreferrer noopener">Wikipedia entry.</a></h3>
       </div>
      </div> 
     
